style : projects alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -173,14 +173,17 @@ a:hover{
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 0;
+    padding:0;
  }
 
  .project-item{
     border: 1px solid black;
     text-align: left;
-    margin: 1rem;
-    padding: 1rem;
     flex-basis: 40%;
+    padding: 1rem;
+    margin: 1rem 0;
  }
 
  .project-item h1{
